updated wheel help file

--- a/app/views/static/help.html.erb
+++ b/app/views/static/help.html.erb
@@ -1,9 +1,9 @@
 <div class="help_text"> 
-	Sectors on the wheel are marked on a scale of 1 - 10 to indicate how satisfied or dissatisfied you are with each area of your life, with 10 being the most satisfied and 1 being the least. Ideally you should aim for at least an 8 in the majority of sectors in your life.
+	Sectors on the wheel are marked on a scale of 1 - 10 to indicate how satisfied or dissatisfied you are with each area of your life, with 10 being the most satisfied and 1 being the least. Ideally you should aim for at least an 8 in most areas of your life.
 <div>
 <br>
 <div class="help_text"> 
-	Your wheel not only identifies the areas where you are least satisfied but also emphasizes the areas where you may be overexerting yourself, spending time and energy on activities that could be more productively or rewardingly used elsewhere. With this in mind as you set goals for improvement it is not only important to identify the activities you plan to start doing in order to regain balance in your life but also to identify the activities you plan to either stop doing, re-prioritize or delegate to others.
+	Your wheel not only identifies where you are least satisfied but also emphasizes where you may be overexerting yourself, spending time and energy on activities that could possibly be more productively or rewardingly used elsewhere. With this in mind as you set goals for improvement it is not only important to identify the activities you plan to start doing in order to regain balance in your life but also to identify the activities you plan to either stop doing, re-prioritize or delegate to others.
 <div>
 <br>
 <div class="help_text"> 
