--- a/app/views/wheels/show.html.erb
+++ b/app/views/wheels/show.html.erb
@@ -1,6 +1,6 @@
 <br>
 <div id="home_text"> 
-	Simply click on any sector of the wheel in order to set goals for that particular area of your life. For help with setting goals and effectively using your wheel please <%= link_to "click here.", help_path, :remote => true %>
+	Click on a sector of the wheel to set goals for that particular area of your life. For help with setting goals and effectively using your personalized wheel, please <%= link_to "click here for more.", help_path, :remote => true %>
 </div>
 
 <div class='hidden'>
