updated wheel help text

--- a/app/views/static/help.html.erb
+++ b/app/views/static/help.html.erb
@@ -7,7 +7,7 @@
 <div>
 <br>
 <div class="help_text"> 
-	Although there may be several areas you may need to work on, it is advised that you work on no more than one or two areas at a time so that you might maintain focus and hereby increase your chance of success in those particular areas. Know that improving targeted areas in your life will have a domino effect that can automatically positively impact other areas so it is not always necessary to start out by tackling your most difficult subjects or areas.
+	Although there may be several areas you may need to work on, it is advised that you work on no more than one or two areas at a time so that you might maintain focus and hereby increase your chance of success in those particular areas. Know that improving targeted areas in your life can have a domino effect that will automatically positively impact other areas so it is not always necessary to start out by tackling your most difficult subjects or areas.
 <div>
 <br>
 <div class="help_text"> 
