updated wheel messages

--- a/app/views/wheels/show.html.erb
+++ b/app/views/wheels/show.html.erb
@@ -1,6 +1,6 @@
 <br>
 <div id="home_text"> 
-	Click on a sector of the wheel to set goals for that particular area of your life. For help with setting goals and effectively using your personalized wheel, please <%= link_to "click here for more.", help_path, :remote => true %>
+	Click on a sector of the wheel to set goals for that particular area of your life. For help with setting goals and effectively using your personalized wheel, <%= link_to "please click here for more.", help_path, :remote => true %>
 </div>
 
 <div class='hidden'>
