--- a/app/assets/stylesheets/general.css.erb
+++ b/app/assets/stylesheets/general.css.erb
@@ -1,3 +1,7 @@
 body{
 background: url(<%=asset_path 'Background.png'%>) no-repeat center center fixed;
 }
+.wheel_back {
+background-image: url(<%=asset_path 'Wheel-Final.png'%>);
+
+}
