--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -58,11 +58,11 @@ box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
     cursor: pointer;
 }
 .wheel_back {
+    top:-69px;
 width: 100%;
-height: 1000px ;
-
+height: 100%;
 background-repeat: no-repeat;
-background-size: 97%;
+background-size: 98%;
 background-position: center 0;
 position: absolute;
 }
