--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -58,7 +58,7 @@ box-shadow: 10px 10px 8px rgba(137, 137, 137, 0.5);
     cursor: pointer;
 }
 .wheel_back {
-    top:-69px;
+    /*top:-68px; Prepared to heroku aligned wheel properly */
 width: 100%;
 height: 100%;
 background-repeat: no-repeat;
