--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,13 @@
            <li><a href="/">Home</a></li>
            <li><a href="#">Testimonials</a></li>
            <li><a href="#">Community</a></li>
+           <% if current_user %>
+            <li><a href="/goals">Goals</a></li>
+            <li><%= link_to 'Logout', destroy_user_session_path %></li>
+          <%else%>
            <li><a href="/users/sign_up">Sign Up</a></li>
            <li><a href="/users/sign_in">Login</a></li>
+          <%end%>
         </ul>      
       </div>
 
