tests updated; suggestions created in seed.rb; implemented i goals form (error: they still are not shown)

--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -22,10 +22,10 @@
   <%= f.submit class: "goal_button"%>
 <% end %>
  
-
-
-
-
-
+<%= @goals.each do |goal| %>
+	<tr>
+		<td><%= goal.suggestion.title %></td>
+	</tr>
+	<% end %>
 
 
