added table for goals fixed edit

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -337,3 +337,100 @@ ul.nav, .nav ul {
     background: #9bbc26;
     border-color: transparent;
 }
+/* Table */
+.GoalsTable {
+    margin:0px;padding:0px;
+    width:100%;
+    box-shadow: 10px 10px 5px #888888;
+    border:1px solid #000000;
+    
+    -moz-border-radius-bottomleft:0px;
+    -webkit-border-bottom-left-radius:0px;
+    border-bottom-left-radius:0px;
+    
+    -moz-border-radius-bottomright:0px;
+    -webkit-border-bottom-right-radius:0px;
+    border-bottom-right-radius:0px;
+    
+    -moz-border-radius-topright:0px;
+    -webkit-border-top-right-radius:0px;
+    border-top-right-radius:0px;
+    
+    -moz-border-radius-topleft:0px;
+    -webkit-border-top-left-radius:0px;
+    border-top-left-radius:0px;
+}.GoalsTable table{
+    width:100%;
+    height:100%;
+    margin:0px;padding:0px;
+}.GoalsTable tr:last-child td:last-child {
+    -moz-border-radius-bottomright:0px;
+    -webkit-border-bottom-right-radius:0px;
+    border-bottom-right-radius:0px;
+}
+.GoalsTable table tr:first-child td:first-child {
+    -moz-border-radius-topleft:0px;
+    -webkit-border-top-left-radius:0px;
+    border-top-left-radius:0px;
+}
+.GoalsTable table tr:first-child td:last-child {
+    -moz-border-radius-topright:0px;
+    -webkit-border-top-right-radius:0px;
+    border-top-right-radius:0px;
+}.GoalsTable tr:last-child td:first-child{
+    -moz-border-radius-bottomleft:0px;
+    -webkit-border-bottom-left-radius:0px;
+    border-bottom-left-radius:0px;
+}.GoalsTable tr:hover td{
+    
+}
+.GoalsTable tr:nth-child(odd){ background-color:#ffffff; }
+.GoalsTable tr    { background-color:#ffffff; }
+
+.GoalsTable td{
+    vertical-align:middle;
+    
+    border:1px solid #000000;
+    border-width:0px 1px 1px 0px;
+    text-align:left;
+    padding:7px;
+    font-size:12px;
+    font-family:Arial;
+    font-weight:normal;
+    color:#000000;
+}
+/*
+}.GoalsTable tr:last-child td{
+    border-width:0px 1px 0px 0px;
+}.GoalsTable tr td:last-child{
+    border-width:0px 0px 1px 0px;
+}.GoalsTable tr:last-child td:last-child{
+    border-width:0px 0px 0px 0px;
+}*/
+.GoalsTable tr:first-child td{
+/*        background:-o-linear-gradient(bottom, #e1e1e1 5%, #e1e1e1 100%);    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e1e1e1), color-stop(1, #e1e1e1) );
+    background:-moz-linear-gradient( center top, #e1e1e1 5%, #e1e1e1 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#e1e1e1", endColorstr="#e1e1e1");  background: -o-linear-gradient(top,#e1e1e1,e1e1e1);
+*/
+    background-color:#e1e1e1;
+/*    border:0px solid #000000;
+    text-align:center;
+    border-width:0px 0px 1px 1px;
+    font-size:14px;
+    font-family:Arial;
+    font-weight:bold;
+    color:#ffffff;
+*/}
+.GoalsTable tr:first-child:hover td{
+    background:-o-linear-gradient(bottom, #e1e1e1 5%, #e1e1e1 100%);    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e1e1e1), color-stop(1, #e1e1e1) );
+    background:-moz-linear-gradient( center top, #e1e1e1 5%, #e1e1e1 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#e1e1e1", endColorstr="#e1e1e1");  background: -o-linear-gradient(top,#e1e1e1,e1e1e1);
+
+    background-color:#e1e1e1;
+}
+/*.GoalsTable tr:first-child td:first-child{
+    border-width:0px 0px 1px 0px;
+}*/
+/*.GoalsTable tr:first-child td:last-child{
+    border-width:0px 0px 1px 1px;
+}*/
