--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -6,7 +6,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 	padding:0;
 }
 table {
-	border-collapse:collapse;
+	/*border-collapse:collapse;*/
 	border-spacing:0;
 }
 fieldset,img { 
