--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,12 +1,40 @@
-<% @goals.each do |goal| %>
-  <tr>
-    <td>Title:<%= goal.title %></td><br>
-    <td>Section:<%= goal.section.section_name %></td><br>
-    <td>Due Date:<%= goal.due_date %></td><br>
-    <td><%= link_to 'Edit', edit_section_goal_path(goal.section, goal) %></td>
-    <td><%= link_to 'Delete', [goal.section, goal], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<div class="GoalsTable" >
+<table>
+	<tr>
+       <td>
+         Section
+       </td>
+       <td >
+          Title
+       </td>
+       <td>
+          Priority
+        </td>
+        <td>
+          Due Date
+        </td>
+        <td>
+          Notes
+        </td>
+        <td>
+        </td>
+        <td>
+        </td>
+     </tr>
+
+	<% @goals.each do |goal| %>
+	<tr>
+		<td><%= goal.section.section_name %></td>
+		<td><%= goal.title %></td>
+		<td><%= goal.priority %></td>
+		<td><%= goal.due_date %></td>
+		<td><%= goal.notes %></td>
+		<td><%= link_to 'Edit', edit_section_goal_path(goal.section, goal) %></td>
+   		<td><%= link_to 'Delete', [goal.section, goal], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	</tr>
+	<% end %>
+</table>
+</div>
 
 <% if current_user.wheel.nil? %>
 <%= link_to 'Create Wheel', new_wheel_path, :class => "homeButton" %>
