--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -1,4 +1,4 @@
-#modal-container {
+#MODAL-container {
   display: none;
   position: fixed;
   top: 0;
@@ -10,10 +10,8 @@
 
 #modal input {
   
-padding: 5px 70px 0 0;
 margin-bottom: 10px;
 margin-top: 1px;
-font-size: 12px;
 }
  
 
