updated wording and spelling

--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -25,7 +25,7 @@
 <br>
 
 <div class='suggestion'>
-<b>How about setting one of those goals?</b><br>
+<b>How about setting one of these goals?</b><br>
 <ul>
 <% @suggestions.each do |suggestion| %>
 		<li><%= suggestion.title %></li>
