--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>360 Life - Your Personal Life Balance Well-Being Tool</title>
+	<title>360 Life - Your Life Balance Self Development Tool</title>
 	<!-- <link REL="stylesheet" type="text/css" href="public/styles/style.css">
 	<link REL="stylesheet" type="text/css" href="public/styles/reset.css"> -->
 	<meta content="text/html; charset=ISO-8859-1" http-equiv="Content-Type">
