--- a/app/views/static/help.html.erb
+++ b/app/views/static/help.html.erb
@@ -1,5 +1,5 @@
 <div class="help_text"> 
-	Sectors on the wheel are marked on a scale of 1 - 10 to indicate how satisfied or dissatisfied you are with each area of your life, with 10 being the most satisfied and 1 being the least. Ideally you should aim for at least an 8 in most areas of your life.
+	Sectors on the wheel are marked on a scale of 1 - 10 to indicate how satisfied or dissatisfied you are with each area of your life, with 10 being the most satisfied and 1 being the least. Ideally you should aim for at least an 8 in the majority of areas of your life.
 <div>
 <br>
 <div class="help_text"> 
