--- a/app/views/wheels/new.html.erb
+++ b/app/views/wheels/new.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <br>
-<% if Rails.env.development? %>
+<% if Rails.env.development? || Rails.env.test? %>
 	<button class='random'>Random answers</button>
 <% end %>
 
